# RTCW-SP-fork

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/botlib/: CMakeLists.txt
src/cgame/: CMakeLists.txt
src/client/: cl_keys.c
src/extractfuncs/: CMakeLists.txt  extractfuncs.c
src/game/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/splines/: CMakeLists.txt
src/ui/: CMakeLists.txt
